# psychopy-ai-coder-assistant

./: .gitignore  BUILD_EXE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: api.md  privacy.md
examples/: example_usage.py
scripts/: build_windows_exe.ps1  install_standalone.sh  run_tests.py
simple_version/: README_GEMINI_ONLY.md  ai_coder_assistant.py  startup.py  test_sample.py
src/psychopy_ai_coder_assistant/: __init__.py  analyzer.py  cli.py  config.py  llm_client.py  patterns.py  plugin.py  prompts.py  security.py  ui.py
tests/: __init__.py  test_analyzer.py  test_config.py  test_integration.py  test_patterns.py  test_prioritization.py  test_security.py
